# JARVIS_CompositeExecutor

./: .env.example  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  release.yml
src/arp_template_composite_executor/: __main__.py  app.py  executor.py  run_coordinator_client.py
src/jarvis_composite_executor/: app.py  executor.py
src/scripts/: dev_server.sh  request.json
tests/: __init__.py  fakes.py  test_app.py  test_arggen.py  test_binder.py  test_driver.py  test_driver_paths.py  test_executor_helpers.py  test_executor_paths.py  test_executor_smoke.py  test_main.py
